# find-the-state-api

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: main.yml
app/: .env.template  Dockerfile  Dockerfile-production  alembic.ini  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 0e88f6cebe2d_update_score_table.py  12154c0dd784_create_fastapi_users_user_table.py  589f4c4cdef2_create_state_table.py  a1c5591554f0_create_score_table.py  a6517320e072_add_state_data.py
app/crud/: score.py  state.py
app/data/: states.json
app/db/: db.py
app/models/: score.py  state.py  user.py
app/postgres_scripts/: install-extensions.sql
app/program_scripts/: score_seed_data.sql  states.sql
app/routes/: score.py  state.py  user.py
app/schemas/: score.py  state.py  user.py
app/tests/: test_health.py
app/utils/: env.py
scripts/: prestart.sh
src/: pyproject.toml
src/app/: crud.py  database.py  db.py  main.py  models.py  schemas.py
src/app/api/: crud.py  models.py  states.py
src/app/crud/: state.py
src/app/db/: db.py
src/app/models/: state.py
src/app/routes/: state.py  states.py
src/data/: README.md  states.json
src/program_scripts/: states.csv
src/scripts/: get_state_data.py  states.csv
