[tool.poetry]
name = "find-the-state-api"
version = "0.1.0"
description = ""
authors = ["John Datserakis <johndatserakis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "0.22.0"
databases = {version = "0.4.3", extras = ["postgresql"]}
fastapi = "0.63.0"
SQLAlchemy = "1.3.24"
uvicorn = "0.13.4"
pytest = "6.2.3"
requests = "2.22.0"
pymediawiki = "^0.7.0"
email-validator = "^1.1.2"
alembic = "^1.5.8"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
