[tool.poetry]
name = "find-the-state-api"
version = "0.1.0"
description = ""
authors = ["John Datserakis <johndatserakis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "0.20.0"
databases = {version = "0.2.6", extras = ["postgresql"]}
fastapi = "0.46.0"
SQLAlchemy = "1.3.12"
uvicorn = "0.11.1"
pytest = "5.3.2"
requests = "2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
